<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6F410A"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#6F410A"
        android:elevation="@dimen/_20sdp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/tv_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#FF6A3C"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit_profile" />

        <ImageView
            android:id="@+id/iv_edit_done"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit_done" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/question_shape"
            android:hint="@string/user_name"
            android:textColor="#FFC107"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="#FFC107"
            android:textSize="@dimen/_16ssp"

            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/question_shape"
            android:hint="@string/email"
            android:textColor="#FFC107"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="#FFC107"
            android:textSize="@dimen/_16ssp" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/question_shape"
            android:hint="@string/date"
            android:textColor="#FFC107"
            android:inputType="date"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="#FFC107"
            android:textSize="@dimen/_16ssp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/question_shape"
            android:hint="User name"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="@dimen/_16ssp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="#FFC107"
                android:textSize="@dimen/_18ssp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="#FFC107"
                android:textSize="@dimen/_18ssp" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/question_shape"
            android:entries="@array/countries_array"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/question_shape"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>