<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    android:background="#6F410A"

    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:background="@drawable/btn_img"
        android:fontFamily="@font/games"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_settings"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_26ssp"
        android:fontFamily="@font/games"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exite"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/_26ssp"
        android:fontFamily="@font/games"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

    <ImageView
        android:id="@+id/iv_big"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_60sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_all_button" />

    <ImageView
        android:id="@+id/iv_small"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/top_all_button" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/welcome"
        android:fontFamily="@font/games"
        android:textColor="@color/white"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>